// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <scpan>
        1
      </scpan>
       
      expense
       totalling 
      <scpan>
        $2.35
      </scpan>
    </h1>
    <div
      className="page-header__action"
    >
      <Link
        className="button button__add "
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <scpan>
        23
      </scpan>
       
      expenses
       totalling 
      <scpan>
        $235,123,409.87
      </scpan>
    </h1>
    <div
      className="page-header__action"
    >
      <Link
        className="button button__add "
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
